--- a/index.html
+++ b/index.html
@@ -101,8 +101,380 @@
 						<li><a class="tooltip" href="#" title="Vimeo"><i class="icon-vimeo"></i></a></li>
 					</ul>
 				</div>
-				
 			</div> <!-- /main-content -->
+
+
+			<div class="main-content">
+
+				<div class="row">
+
+					<div class="span8">
+
+						<h2 class="section-heading offset-top">Work Experience</h2>
+						<dl class="timeline">
+							<dt>
+								<strong>Apple, Inc.</strong>
+							<p>2011 - Current</p>
+							</dt>
+							<dd>
+								<h4>Senior UI Designer</h4>
+								<p>The size and age of the Cosmos are beyond ordinary human understanding.</p>
+							</dd>
+							<dt>
+								<strong>Freelance</strong>
+							<p>2007 - Current</p>
+							</dt>
+							<dd>
+								<h4>Designer</h4>
+								<p>In a cosmic perspective, most human concerns seem insignificant, even petty.</p>
+							</dd>
+							<dt>
+								<strong>Pixar</strong>
+							<p>2006 - 2009</p>
+							</dt>
+							<dd>
+								<h4>Front-End Development</h4>
+								<p>In the last few millennia we have made the most astonishing and unexpected discoveries.</p>
+							</dd>
+						</dl>
+
+						<h2 class="section-heading">Education</h2>
+						<dl class="timeline section">
+							<dt>
+							<p>2005</p>
+							</dt>
+							<dd>
+								<h4>Bachelor of Computer Science <small>of California Institute of Technology</small></h4>
+								<p>They remind us that humans have evolved to wonder, that understanding is a joy.</p>
+							</dd>
+						</dl>
+
+						<p class="span4 offset2"><a class="button secondary full" href="#"><i class="icon-download"></i> Download My Resume</a></p>
+
+					</div>
+
+					<div class="span4">
+
+						<div class="box-light">
+							<h2 class="box-heading">Skills</h2>
+							<h3>General Skills</h3>
+							<ul class="bold">
+								<li>User Interface Design</li>
+								<li>Web Standards</li>
+								<li>Responsive Design</li>
+							</ul>
+							<h3>Design</h3>
+							<ul class="bold plain">
+								<li>User Interface Design <div class="progress-bar"><div style="width: 75%"></div></div></li>
+								<li>Graphic Design <div class="progress-bar"><div style="width: 45%"></div></div></li>
+								<li>Logi &amp; Identity Design <div class="progress-bar"><div style="width: 25%"></div></div></li>
+							</ul>
+							<h3>Coding &amp; Programming</h3>
+							<ul class="bold plain">
+								<li>HTML / CSS <div class="progress-bar"><div style="width: 85%"></div></div></li>
+								<li>JavaScript / jQuery <div class="progress-bar"><div style="width: 66%"></div></div></li>
+								<li>PHP <div class="progress-bar"><div style="width: 40%"></div></div></li>
+							</ul>
+						</div>
+
+					</div>
+
+				</div>
+
+			</div> <!-- /main-content -->
+
+
+
+
+
+
+			<div id="container">
+
+				<nav id="mainnav" role="navigation">
+					<ul>
+						<li><a href="index.html"><i class="icon-home"></i> Home</a></li>
+						<li class="active"><a href="about-me.html"><i class="icon-user"></i> About Me</a></li>
+						<li><a href="resume.html"><i class="icon-feather"></i> Resume</a></li>
+						<li><a href="portfolio.html"><i class="icon-picture"></i> Portfolio</a></li>
+						<li><a href="contact.html"><i class="icon-mail"></i> Contact</a></li>
+						<li><a href="extras.html"><i class="icon-tools"></i> Extras</a></li>
+						<li><a href="http://www.weidea.net"><i class="icon-tools"></i> More theme</a></li>
+					</ul>
+				</nav>
+
+				<div class="main-content">
+
+					<h1 class="section-heading larger">A bit about me</h1>
+
+					<div class="row section">
+						<div class="span4">
+							<figure class="photo"><img src="img/profile.jpg" alt="Jonathan Orange"></figure>
+						</div>
+						<div class="span4">
+							<p><b>The Earth is a very small stage in a vast</b> cosmic arena. Think of the rivers of blood spilled by all those generals and emperors so that, in <a href="#">glory and triumph</a>, they could become the momentary masters of a fraction of a dot.</p>
+							<p>Think of the endless cruelties visited by the inhabitants of one corner of this pixel on the scarcely distinguishable inhabitants.</p>
+						</div>
+						<div class="span4">
+							<p>I could easily see the shores of continents, islands, great rivers, folds of the terrain, large bodies of water. The horizon is dark blue, smoothly turning to black… the feelings which filled me I can express with one word – joy.</p>
+							<blockquote class="plain">
+								<p>I am a stranger. I come in peace. Take me to your leader and there will be a massive reward for you in eternity.</p>
+							</blockquote>
+						</div>
+					</div>
+
+					<div class="slider">
+
+						<div class="items">
+
+							<div>
+
+								<div class="row">
+									<div class="span4">
+										<div class="box-light box-details">
+											<h2>Personal Details</h2>
+											<dl class="details">
+												<dt>Name:</dt>
+												<dd>Jonathan Doe</dd>
+												<dt>Date of birth:</dt>
+												<dd>January 15, 1980</dd>
+												<dt>Nationality:</dt>
+												<dd>American</dd>
+												<dt>Eye color:</dt>
+												<dd>Brown</dd>
+											</dl>
+										</div>
+									</div>
+									<div class="span4">
+										<h2 class="section-heading">Interests</h2>
+										<p>There are many things I enjoy doing other than crafting amazing websites.<br> I like running, swimming, watching movies and reading fantasy. I also like:</p>
+										<ul>
+											<li>Staring at the <strong>sun</strong></li>
+											<li>Painting unicorns and <strong>rainbows</strong></li>
+											<li>Watching <strong>cats</strong></li>
+										</ul>
+									</div>
+									<div class="span4">
+										<h2 class="section-heading">Tools of the trade</h2>
+										<p>I can’t go anywhere without my tools. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque dignissim aliquam <a href="#">tincidunt</a>.</p>
+										<ul class="tick">
+											<li>Adobe <strong>Photoshop</strong></li>
+											<li>Adobe <strong>Illustrator</strong></li>
+											<li>Panic’s <strong>Coda</strong></li>
+										</ul>
+										<p class="right"><a class="button small next-slide" href="#">My services <i class="icon-right-open right"></i></a></p>
+									</div>
+								</div>
+
+							</div>
+
+							<div>
+
+								<h2 class="section-heading">My services: I’m pretty good at…</h2>
+
+								<ul class="tabs-vertical">
+									<li><a href="#"><i class="icon-eye"></i> User Interface Design</a></li>
+									<li><a href="#"><i class="icon-code"></i> Front-End Development</a></li>
+									<li><a href="#"><i class="icon-globe"></i> CMS Integration</a></li>
+									<li><a href="#"><i class="icon-mobile"></i> Mobile App Development</a></li>
+									<li><a href="#"><i class="icon-rocket"></i> UX Consulting</a></li>
+								</ul>
+								<div class="panes">
+									<div>
+										<h3>Quisque eget sapien ligula.</h3>
+										<p>Our posturings, our imagined self-importance, the delusion that we have some privileged position in the Universe, are challenged by this point of pale light.<br> Our planet is a lonely speck in the great enveloping cosmic dark.</p>
+										<h3>Look again at the dot.</h3>
+										<ol>
+											<li>On it everyone you love</li>
+											<li>Everyone you know</li>
+											<li>Everyone you ever heard of</li>
+										</ol>
+									</div>
+									<div>
+										<div class="accordion">
+											<h2>First section</h2>
+											<div>
+												<p><b>Lorem ipsum dolor sit amet</b>, consectetur adipiscing elit. Vestibulum felis ante, luctus vitae pretium eu, mattis nec est. Nulla facilisi. Quisque eget sapien ligula. Quisque eget sapien ligula.</p>
+											</div>
+											<h2>Second section</h2>
+											<div>
+												<p>Vestibulum felis ante, luctus vitae pretium eu, mattis nec est. Nulla facilisi. Suspendisse ullamcorper lacus ac libero pellentesque dapibus. Proin sit amet neque dui. Duis et ante turpis, sit amet elementum massa. Curabitur fringilla consectetur eleifend. Aliquam erat volutpat.</p>
+												<p>Nunc aliquam ultrices rutrum. Integer mi orci, condimentum in rutrum nec, molestie et purus. Suspendisse potenti. Proin suscipit bibendum risus, sit amet volutpat erat ultricies ac. Nam nisl odio.</p>
+											</div>
+											<h2>Third section</h2>
+											<div>
+												<p>Aliquam erat volutpat. In rhoncus arcu non leo imperdiet aliquet. Vestibulum felis ante, luctus vitae pretium eu, mattis nec est. Nulla facilisi. Quisque eget sapien ligula. Suspendisse ullamcorper lacus ac libero pellentesque dapibus. Proin sit amet neque dui.</p>
+											</div>
+										</div>
+									</div>
+									<div>
+										<p>Consectetur adipiscing elit. Vestibulum felis ante, luctus vitae pretium eu, mattis nec est. Nulla facilisi. Quisque eget sapien ligula. Suspendisse ullamcorper lacus ac libero pellentesque dapibus. Proin sit amet neque dui. Duis et ante turpis, sit amet elementum massa. Curabitur fringilla consectetur eleifend. Aliquam erat volutpat. In rhoncus arcu non leo imperdiet aliquet.</p>
+										<p>Nunc aliquam ultrices rutrum. Integer mi orci, condimentum in rutrum nec, molestie et purus. Suspendisse potenti. Proin suscipit bibendum risus, sit amet volutpat erat ultricies ac. Nam nisl odio.</p>
+									</div>
+									<div>
+										<p>Nulla facilisi. Quisque eget sapien ligula. Suspendisse ullamcorper lacus ac libero pellentesque dapibus. Proin sit amet neque dui. Duis et ante turpis, sit amet elementum massa. Curabitur fringilla consectetur eleifend. Aliquam erat volutpat. In rhoncus arcu non leo imperdiet aliquet. Nunc aliquam ultrices rutrum. Integer mi orci, condimentum in rutrum nec, molestie et purus.</p>
+										<p>Suspendisse potenti. Proin suscipit bibendum risus, sit amet volutpat erat ultricies ac. Nam nisl odio. In rhoncus arcu non leo imperdiet aliquet condimentum in rutrum nec, molestie et purus. Suspendisse potenti.</p>
+									</div>
+									<div>
+										<p>Luctus vitae pretium eu, mattis nec est. Nulla facilisi. Quisque eget sapien ligula. Suspendisse ullamcorper lacus ac libero pellentesque dapibus. Proin sit amet neque dui. Duis et ante turpis, sit amet elementum massa. condimentum in rutrum nec, molestie et purus. Suspendisse potenti Curabitur fringilla consectetur eleifend. Aliquam erat volutpat. In rhoncus arcu non leo imperdiet aliquet. Nunc aliquam ultrices rutrum.</p>
+										<p>Integer mi orci, condimentum in rutrum nec, molestie et purus. Suspendisse potenti. Proin suscipit bibendum risus, sit amet volutpat erat ultricies ac. Nam nisl odio.</p>
+									</div>
+								</div>
+								<p class="right"><a class="button small next-slide" href="#">Fun facts and numbers <i class="icon-right-open right"></i></a></p>
+
+							</div>
+
+							<div>
+
+								<div class="box-dark">
+									<div class="cols">
+										<div class="col1of2">
+											<h2 class="section-heading">Random facts about me</h2>
+											<ul class="extended">
+												<li>
+													<strong>I wanted to be an astronomer</strong><br>
+													But I wasn't good enough for it
+												</li>
+												<li>
+													<strong>I can whistle five different ways</strong><br>
+													Phasellus at lectus nec sem hendrerit gravida
+												</li>
+												<li>
+													<strong>My name was initially going to be Dale</strong><br>
+													It was changed to Jony while I was still in the hospital
+												</li>
+											</ul>
+										</div>
+										<div class="col1of2">
+											<h2 class="section-heading">The universe by numbers</h2>
+											<ul class="extended numbers">
+												<li>
+													<span class="number">3.14</span>
+													<strong>Sociosqu ad litora</strong><br>
+													Class aptent taciti sociosqu ad litora torquent.
+												</li>
+												<li>
+													<span class="number">1.618</span>
+													<strong>Facilisis lacinia</strong><br>
+													Etiam vestibulum facilisis lacinia.
+												</li>
+												<li>
+													<span class="number">7</span>
+													<strong>Lacinia maecenas</strong><br>
+													Sit vestibulum facilisis lacinia maecenas.
+												</li>
+											</ul>
+										</div>
+									</div>
+								</div>
+
+							</div>
+
+						</div>
+
+					</div> <!-- /slider -->
+
+				</div> <!-- /main-content -->
+
+
+
+
+				<div class="main-content">
+
+					<div class="address">
+						<div class="row">
+							<div class="span6">
+								<p><strong>Jonathan Orange</strong></p>
+							</div>
+							<div class="span6">
+								<p><i class="icon-phone"></i> <strong>Phone:</strong> 555 678 901</p>
+							</div>
+						</div>
+						<div class="row">
+							<div class="span6">
+								<p>322672 CSS Street</p>
+							</div>
+							<div class="span6">
+								<p><i class="icon-mail"></i> <strong>E-mail:</strong> my@email.com</p>
+							</div>
+						</div>
+						<div class="row">
+							<div class="span6">
+								<p>San Francisco, USA</p>
+							</div>
+							<div class="span6">
+								<p><i class="icon-skype"></i> <strong>Skype:</strong> jonyorange</p>
+							</div>
+						</div>
+					</div>
+
+					<p class="centered"><a class="button small popup-gmaps" href="http://maps.google.com/maps?q=San+Francisco,+CA,+United+States&amp;hl=en&amp;ll=37.773089,-122.405033&amp;spn=0.057939,0.132093&amp;sll=51.523704,-0.158553&amp;sspn=0.011402,0.033023&amp;oq=san+fransisco&amp;t=m&amp;hnear=San+Francisco,+California&amp;z=14">View my location</a></p>
+
+					<div class="content-switch">
+						<div class="controls">
+							<h2><span>Contact form type</span></h2>
+							<ul>
+								<li>Standard</li>
+								<li>Postcard</li>
+							</ul>
+						</div>
+						<div class="panes">
+
+							<div class="box-dark">
+								<h2 class="section-heading">Let’s talk…</h2>
+								<p class="centered explanation">There is no better way to contact me than to use this form. You should do it now.</p>
+								<form id="contact-form" action="mail/send.php" method="post" novalidate data-validate="parsley">
+									<fieldset>
+										<p class="user-data">
+											<input type="text" name="name" required placeholder="Your name">
+											<input type="email" name="email" required placeholder="Your e-mail address">
+										</p>
+										<p class="message">
+											<textarea name="message" placeholder="Your message" required></textarea>
+										</p>
+										<p class="submit"><button type="submit" class="button large">Send message</button></p>
+									</fieldset>
+									<div class="alert success hidden">
+										<p>Your message has been sent. Thank you!</p>
+									</div>
+									<div class="alert error hidden">
+										<p>Sorry, your message has not been sent. Please try again.</p>
+									</div>
+								</form>
+							</div>
+
+							<div id="postcard-container">
+								<div>
+									<div id="postcard">
+										<form action="mail/send.php" method="post" novalidate data-validate="parsley">
+											<h2>Message:</h2>
+											<fieldset>
+												<p>To: Jonathan Orange</p>
+												<p><label>From: <input type="text" name="name" required placeholder="Your name"></label></p>
+												<p><label>Return e-mail: <input type="email" name="email" required placeholder="Your e-mail address"></label></p>
+												<textarea name="message" required></textarea>
+											</fieldset>
+											<button type="submit">Send</button>
+											<div class="stamp">
+												<div class="v1"></div>
+												<div class="v2"></div>
+												<div class="v3"></div>
+											</div>
+											<div class="stamp-mark"></div>
+										</form>
+									</div>
+								</div>
+								<div class="alert success hidden">
+									<p>Your message has been sent. Thank you!</p>
+								</div>
+								<div class="alert error hidden">
+									<p>Sorry, your message has not been sent. Please try again.</p>
+								</div>
+							</div>
+
+						</div>
+					</div> <!-- /content-switch -->
+
+				</div> <!-- /main-content -->
 			
 			<div class="content-footer">
 				<div class="wrapper">
