--- a/index.html
+++ b/index.html
@@ -101,10 +101,10 @@
 						<li><a class="tooltip" href="#" title="Vimeo"><i class="icon-vimeo"></i></a></li>
 					</ul>
 				</div>
-			</div> <!-- /main-content -->
+			<!--</div> &lt;!&ndash; /main-content &ndash;&gt;-->
 
 
-			<div class="main-content">
+			<!--<div class="main-content">-->
 
 				<div class="row">
 
@@ -181,28 +181,14 @@
 
 				</div>
 
-			</div> <!-- /main-content -->
+			<!--</div> &lt;!&ndash; /main-content &ndash;&gt;-->
 
 
 
 
 
 
-			<div id="container">
-
-				<nav id="mainnav" role="navigation">
-					<ul>
-						<li><a href="index.html"><i class="icon-home"></i> Home</a></li>
-						<li class="active"><a href="about-me.html"><i class="icon-user"></i> About Me</a></li>
-						<li><a href="resume.html"><i class="icon-feather"></i> Resume</a></li>
-						<li><a href="portfolio.html"><i class="icon-picture"></i> Portfolio</a></li>
-						<li><a href="contact.html"><i class="icon-mail"></i> Contact</a></li>
-						<li><a href="extras.html"><i class="icon-tools"></i> Extras</a></li>
-						<li><a href="http://www.weidea.net"><i class="icon-tools"></i> More theme</a></li>
-					</ul>
-				</nav>
-
-				<div class="main-content">
+				<!--<div class="main-content">-->
 
 					<h1 class="section-heading larger">A bit about me</h1>
 
@@ -373,12 +359,12 @@
 
 					</div> <!-- /slider -->
 
-				</div> <!-- /main-content -->
+				<!--</div> &lt;!&ndash; /main-content &ndash;&gt;-->
 
 
 
 
-				<div class="main-content">
+				<!--<div class="main-content">-->
 
 					<div class="address">
 						<div class="row">
