delete menu bar

--- a/index.html
+++ b/index.html
@@ -28,17 +28,17 @@
 		
 		<div id="container">
 			
-			<nav id="mainnav" role="navigation">
-				<ul>
-					<li class="active"><a href="index.html"><i class="icon-home"></i> Home</a></li>
-					<li><a href="about-me.html"><i class="icon-user"></i> About Me</a></li>
-					<li><a href="resume.html"><i class="icon-feather"></i> Resume</a></li>
-					<li><a href="portfolio.html"><i class="icon-picture"></i> Portfolio</a></li>
-					<li><a href="contact.html"><i class="icon-mail"></i> Contact</a></li>
-					<li><a href="extras.html"><i class="icon-tools"></i> Extras</a></li>
-                    <li><a href="http://www.weidea.net"><i class="icon-tools"></i> More theme</a></li>
-				</ul>
-			</nav>
+			<!--<nav id="mainnav" role="navigation">-->
+				<!--<ul>-->
+					<!--<li class="active"><a href="index.html"><i class="icon-home"></i> Home</a></li>-->
+					<!--<li><a href="about-me.html"><i class="icon-user"></i> About Me</a></li>-->
+					<!--<li><a href="resume.html"><i class="icon-feather"></i> Resume</a></li>-->
+					<!--<li><a href="portfolio.html"><i class="icon-picture"></i> Portfolio</a></li>-->
+					<!--<li><a href="contact.html"><i class="icon-mail"></i> Contact</a></li>-->
+					<!--<li><a href="extras.html"><i class="icon-tools"></i> Extras</a></li>-->
+                    <!--<li><a href="http://www.weidea.net"><i class="icon-tools"></i> More theme</a></li>-->
+				<!--</ul>-->
+			<!--</nav>-->
 			
 			<div class="ribbon available"><span><a href="contact.html">I’m available</a></span></div>
 			
