delete ribbon section

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 				<!--</ul>-->
 			<!--</nav>-->
 			
-			<div class="ribbon available"><span><a href="contact.html">I’m available</a></span></div>
+			<!--<div class="ribbon available"><span><a href="contact.html">I’m available</a></span></div>-->
 			
 			<div class="main-content">
 				
