fix background image issue

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 	<head>
 		<meta charset="utf-8">
-		<title>Jonathan Orange – Designer &amp; Developer</title>
+		<title>Bo Liu – Developer &amp; Editor</title>
 		
 		<!-- Mobile Specific Settings -->
 		<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
@@ -28,84 +28,8 @@
 		
 		<div id="container">
 			
-			<!--<nav id="mainnav" role="navigation">-->
-				<!--<ul>-->
-					<!--<li class="active"><a href="index.html"><i class="icon-home"></i> Home</a></li>-->
-					<!--<li><a href="about-me.html"><i class="icon-user"></i> About Me</a></li>-->
-					<!--<li><a href="resume.html"><i class="icon-feather"></i> Resume</a></li>-->
-					<!--<li><a href="portfolio.html"><i class="icon-picture"></i> Portfolio</a></li>-->
-					<!--<li><a href="contact.html"><i class="icon-mail"></i> Contact</a></li>-->
-					<!--<li><a href="extras.html"><i class="icon-tools"></i> Extras</a></li>-->
-                    <!--<li><a href="http://www.weidea.net"><i class="icon-tools"></i> More theme</a></li>-->
-				<!--</ul>-->
-			<!--</nav>-->
-			
-			<!--<div class="ribbon available"><span><a href="contact.html">I’m available</a></span></div>-->
-			
 			<div class="main-content">
 				
-				<!--<div class="welcome-block">-->
-					<!--<h1 class="section-heading larger">Hello and welcome!</h1>-->
-					<!--<div class="welcome">-->
-						<!--<figure class="photo-small"><img src="img/profile.jpg" alt="Jonathan Orange"></figure>-->
-						<!--<p>My name is <strong>Jonathan</strong> and I’m an <strong>user interface designer</strong> <span class="amp">&amp;</span> <strong>developer</strong> based in San Francisco.<br> Wel… actually, I’m your imaginary friend and volunteer for this beautiful vCard template.</p>-->
-					<!--</div>-->
-				<!--</div>-->
-				<!-- -->
-				<!--<div class="shortcuts">-->
-					<!--<div class="row">-->
-						<!--<div class="span6 item-1">-->
-							<!--<a href="about-me.html">-->
-								<!--<h2>Learn more about me</h2>-->
-								<!--<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit aenean pharetra feugiat ipsum vitae.</p>-->
-								<!--<span class="ico"><i class="icon-user"></i></span>-->
-							<!--</a>-->
-						<!--</div>-->
-						<!--<div class="span6 item-2">-->
-							<!--<a href="resume.html">-->
-								<!--<h2>View my resume</h2>-->
-								<!--<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit aenean pharetra feugiat ipsum vitae.</p>-->
-								<!--<span class="ico"><i class="icon-feather"></i></span>-->
-							<!--</a>-->
-						<!--</div>-->
-					<!--</div>-->
-					<!--<div class="row">-->
-						<!--<div class="span6 item-3">-->
-							<!--<a href="portfolio.html">-->
-								<!--<h2>Check out my work</h2>-->
-								<!--<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit aenean pharetra feugiat ipsum vitae.</p>-->
-								<!--<span class="ico"><i class="icon-picture"></i></span>-->
-							<!--</a>-->
-						<!--</div>-->
-						<!--<div class="span6 item-4">-->
-							<!--<a href="contact.html">-->
-								<!--<h2>Hire me for your next project</h2>-->
-								<!--<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit aenean pharetra feugiat ipsum vitae.</p>-->
-								<!--<span class="ico"><i class="icon-mail"></i></span>-->
-							<!--</a>-->
-						<!--</div>-->
-					<!--</div>-->
-				<!--</div>-->
-				<!-- -->
-				<!--<div class="social-media-block">-->
-					<!--<h2 class="section-heading">Connect with me</h2>-->
-					<!--<ul class="social-media">-->
-						<!--<li><a class="tooltip" href="#" title="Twitter"><i class="icon-twitter"></i></a></li>-->
-						<!--<li><a class="tooltip" href="#" title="Facebook"><i class="icon-facebook"></i></a></li>-->
-						<!--<li><a class="tooltip" href="#" title="Google+"><i class="icon-gplus"></i></a></li>-->
-						<!--<li><a class="tooltip" href="#" title="Dribbble"><i class="icon-dribbble"></i></a></li>-->
-						<!--<li><a class="tooltip" href="#" title="Behance"><i class="icon-behance"></i></a></li>-->
-						<!--<li><a class="tooltip" href="#" title="LinkedIn"><i class="icon-linkedin"></i></a></li>-->
-						<!--<li><a class="tooltip" href="#" title="Last.fm"><i class="icon-lastfm"></i></a></li>-->
-						<!--<li><a class="tooltip" href="#" title="Pinterest"><i class="icon-pinterest"></i></a></li>-->
-						<!--<li><a class="tooltip" href="#" title="Vimeo"><i class="icon-vimeo"></i></a></li>-->
-					<!--</ul>-->
-				<!--</div>-->
-			<!--</div> &lt;!&ndash; /main-content &ndash;&gt;-->
-
-
-			<!--<div class="main-content">-->
-
 				<div class="row">
 
 					<div class="span8">
@@ -181,14 +105,6 @@
 
 				</div>
 
-			<!--</div> &lt;!&ndash; /main-content &ndash;&gt;-->
-
-
-
-
-
-
-				<!--<div class="main-content">-->
 
 					<h1 class="section-heading larger">A bit about me</h1>
 
