--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 		
 		<!-- Icon Fonts: Entypo -->
 		<link rel="stylesheet" href="css/icons.css">
+		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
 		
 		<!-- CSS Styles -->
 		<link rel="stylesheet" href="css/normalize.css">
@@ -105,16 +106,7 @@
 
 				</div>
 
-				</div> <!-- /main-content -->
-			
-			<div class="content-footer">
-				<div class="wrapper">
-					<div id="twitter-box">
-						<h2><a href="http://twitter.com/envato">Thoughts from my Twitter</a></h2>
-						<div id="twitter-feed"></div>
-					</div>
-				</div>
-			</div> <!-- /content-footer -->
+			</div> <!-- /main-content -->
 		
 		</div> <!-- /container -->
 		
@@ -124,7 +116,7 @@
 				<li><a href="http://dribbble.com/Nazcain"><i class="icon-dribbble"></i> Find me on Dribbble</a></li>
 				<li><a href="http://themeforest.net/user/Lebensform"><i class="icon-basket"></i> Buy this template</a></li>
 			</ul>
-			<p>There is also a <strong>footer</strong> in case you need it. You can easily remove it though.</p>
+			<p>Developed with <i class="fa fa-heart-o"></i> by Bo Liu</p>
 		</footer> <!-- /footer -->
 				
 		<!-- JavaScript -->
