--- a/index.html
+++ b/index.html
@@ -17,18 +17,26 @@
 		<!-- CSS Styles -->
 		<link rel="stylesheet" href="css/normalize.css">
 		<link rel="stylesheet" href="css/skin-gold.css">
+		<link rel="stylesheet" href="css/custom.css">
+		<link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/github-fork-ribbon-css/0.1.1/gh-fork-ribbon.min.css" />
+		<!--[if lt IE 9]>
+		<link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/github-fork-ribbon-css/0.1.1/gh-fork-ribbon.ie.min.css" />
+		<![endif]-->
 		<noscript><link rel="stylesheet" href="css/no-js.css"></noscript>
 		
 	</head>
 	<body>
-	
-		<header id="header">
+	<!--<a href="https://github.com/liubo2055">-->
+		<!--<img style="position: absolute; top: 0; right: 0; border: 0;" src="https://camo.githubusercontent.com/52760788cde945287fbb584134c4cbc2bc36f904/68747470733a2f2f73332e616d617a6f6e6177732e636f6d2f6769746875622f726962626f6e732f666f726b6d655f72696768745f77686974655f6666666666662e706e67" alt="Fork me on GitHub" data-canonical-src="https://s3.amazonaws.com/github/ribbons/forkme_right_white_ffffff.png">-->
+	<!--</a>-->
+
+	<header id="header">
 			<h1><a href="index.html">Bo Liu</a></h1>
 			<h2>Developer <span class="amp">&amp;</span> Editor</h2>
 		</header>
 		
 		<div id="container">
-			
+			<a href="https://github.com/liubo2055"><img style="position: absolute; top: 0; left: 0; border: 0;" src="https://camo.githubusercontent.com/c6286ade715e9bea433b4705870de482a654f78a/68747470733a2f2f73332e616d617a6f6e6177732e636f6d2f6769746875622f726962626f6e732f666f726b6d655f6c6566745f77686974655f6666666666662e706e67" alt="Fork me on GitHub" data-canonical-src="https://s3.amazonaws.com/github/ribbons/forkme_left_white_ffffff.png"></a>
 			<div class="main-content">
 				
 				<div class="row">
@@ -38,43 +46,92 @@
 						<h2 class="section-heading offset-top">Work Experience</h2>
 						<dl class="timeline">
 							<dt>
-								<strong>Apple, Inc.</strong>
-							<p>2011 - Current</p>
+								<strong>Project 1</strong>
+							<p>May – July 2015</p>
 							</dt>
 							<dd>
-								<h4>Senior UI Designer</h4>
-								<p>The size and age of the Cosmos are beyond ordinary human understanding.</p>
+								<h4><a href="http://choco.sytes.net:333/assignment3">Web Application with PHP, MySQL, and Laravel 5.1</a></h4>
+								<p>
+									Developed and implemented a web flashcards application based on LAMP and Laravel framework
+								</p>
+								<a href="https://github.com/liubo2055/COMP-2920-Project"><i class="fa fa-github"></i></a>&nbsp;&nbsp;&nbsp;<a href="http://choco.sytes.net:333/assignment3"><i class="fa fa-link"></i></a>
 							</dd>
 							<dt>
-								<strong>Freelance</strong>
-							<p>2007 - Current</p>
+								<strong>Project 2</strong>
+							<p>Sep – Dec 2014</p>
 							</dt>
 							<dd>
-								<h4>Designer</h4>
-								<p>In a cosmic perspective, most human concerns seem insignificant, even petty.</p>
+								<h4><a href="http://liubo2055.github.io/landing">A Landing Page with HTML, CSS, and JavaScript</a></h4>
+								<p>
+									Developed a landing page for BCIT iOS App based on jQuery, Bootstrap, and CSS animations
+								</p>
+								<a href="https://github.com/liubo2055/landing-page"><i class="fa fa-github"></i></a>&nbsp;&nbsp;&nbsp;<a href="http://liubo2055.github.io/landing"><i class="fa fa-link"></i></a>
 							</dd>
 							<dt>
-								<strong>Pixar</strong>
-							<p>2006 - 2009</p>
+								<strong>Project 3</strong>
+							<p>Jan – May 2015</p>
 							</dt>
 							<dd>
-								<h4>Front-End Development</h4>
-								<p>In the last few millennia we have made the most astonishing and unexpected discoveries.</p>
+								<h4><a href="https://youtu.be/9byFGVawHy0">An Android News Publish and Reader App with Java and Node.js</a></h4>
+								<p>Developed a RESTful API with Node.js, express and mongo DB to publish, edit, and delete news </p>
+								<p>Implemented a news reader with XML and JSON parser, and starred the news with SQLite database</p>
+								<a href="https://github.com/liubo2055/android-news-app"><i class="fa fa-github"></i></a>&nbsp;&nbsp;&nbsp;<a href="https://youtu.be/9byFGVawHy0"><i class="fa fa-youtube"></i></a>
+							</dd>
+							<dt>
+								<strong>Project 4</strong>
+							<p>May – July 2015</p>
+							</dt>
+							<dd>
+								<h4><a href="http://liubo2055.github.io/db">Database Design & SQL Query with Microsoft SQL Server</a></h4>
+								<p>Designed a relational database from scratch to maintain data for alumni of the university in regards to memberships to university clubs.</p>
+								<p>Developed SQL query scripts to create/delete/alter database tables, insert/update/delete table rows, and create/execute stored procedures</p>
+								<a href="http://liubo2055.github.io/db"><i class="fa fa-link"></i></a>
+							</dd>
+							<dt>
+								<strong>Project 5</strong>
+							<p>June – Sep 2014</p>
+							</dt>
+							<dd>
+								<h4><a href="http://youtu.be/Y5BYkI-02ck">Holiday Feet Business App with Objective-C</a></h4>
+								<p>Developed an iOS app for Vancouver local-based business called Holiday Feet</p>
+								<a href="https://github.com/liubo2055/ios-holiday-feet-project"><i class="fa fa-github"></i></a>&nbsp;&nbsp;&nbsp;<a href="http://youtu.be/Y5BYkI-02ck"><i class="fa fa-youtube"></i></a>
+							</dd>
+							<dt>
+								<strong>Project 6</strong>
+							<p>Jan – May 2015</p>
+							</dt>
+							<dd>
+								<h4><a href="https://github.com/liubo2055/accelerometer-game-cordova">Accelerometer Game with Cordova</a></h4>
+								<p>Developed a bumper ball game with Cordova device motion plugin and jQuery mobile UI</p>
+								<a href="https://github.com/liubo2055/accelerometer-game-cordova"><i class="fa fa-github"></i></a>
+							</dd>
+							<dt>
+								<strong>Project 7</strong>
+							<p>April – June 2014</p>
+							</dt>
+							<dd>
+								<h4>UBC Student Club Website with WordPress</h4>
+								<p>Developed a WordPress website for UBC student club</p>
 							</dd>
 						</dl>
 
 						<h2 class="section-heading">Education</h2>
 						<dl class="timeline section">
 							<dt>
-							<p>2005</p>
+							<p>2014-2015</p>
 							</dt>
 							<dd>
-								<h4>Bachelor of Computer Science <small>of California Institute of Technology</small></h4>
-								<p>They remind us that humans have evolved to wonder, that understanding is a joy.</p>
+								<h4><a href="http://www.bcit.ca/study/programs/6465acert">Web and Mobile Application Development Certificate</a> <small>of British Columbia Institute of Technology</small></h4>
+							</dd>
+							<dt>
+							<p>2015-2016</p>
+							</dt>
+							<dd>
+								<h4><a href="http://www.bcit.ca/study/programs/6445acert">Advanced Java Development Certificate</a> <small>of British Columbia Institute of Technology</small></h4>
 							</dd>
 						</dl>
 
-						<p class="span4 offset2"><a class="button secondary full" href="#"><i class="icon-download"></i> Download My Resume</a></p>
+						<p class="span4 offset2"><a class="button secondary full" href="bo-liu-resume.pdf"><i class="icon-download"></i> Download My Resume</a></p>
 
 					</div>
 
@@ -84,21 +141,38 @@
 							<h2 class="box-heading">Skills</h2>
 							<h3>General Skills</h3>
 							<ul class="bold">
-								<li>User Interface Design</li>
+								<li>Web and Mobile Development</li>
+								<li>Database Design and Query</li>
+								<li>Responsive Web Design</li>
 								<li>Web Standards</li>
-								<li>Responsive Design</li>
 							</ul>
-							<h3>Design</h3>
+							<h3>Back-End Web Development</h3>
 							<ul class="bold plain">
-								<li>User Interface Design <div class="progress-bar"><div style="width: 75%"></div></div></li>
-								<li>Graphic Design <div class="progress-bar"><div style="width: 45%"></div></div></li>
-								<li>Logi &amp; Identity Design <div class="progress-bar"><div style="width: 25%"></div></div></li>
+								<li>Laravel 5.1 &amp; PHP <div class="progress-bar"><div style="width: 95%"></div></div></li>
+								<li>WordPress <div class="progress-bar"><div style="width: 80%"></div></div></li>
+								<li>Java Web Development <div class="progress-bar"><div style="width: 70%"></div></div></li>
+								<li>Node.js <div class="progress-bar"><div style="width: 50%"></div></div></li>
+								<li>ASP.Net <div class="progress-bar"><div style="width: 50%"></div></div></li>
 							</ul>
-							<h3>Coding &amp; Programming</h3>
+							<h3>Front-End Web Development</h3>
 							<ul class="bold plain">
 								<li>HTML / CSS <div class="progress-bar"><div style="width: 85%"></div></div></li>
-								<li>JavaScript / jQuery <div class="progress-bar"><div style="width: 66%"></div></div></li>
-								<li>PHP <div class="progress-bar"><div style="width: 40%"></div></div></li>
+								<li>JavaScript / jQuery <div class="progress-bar"><div style="width: 80%"></div></div></li>
+								<li>Bootstrap <div class="progress-bar"><div style="width: 80%"></div></div></li>
+								<li>AngularJS <div class="progress-bar"><div style="width: 50%"></div></div></li>
+							</ul>
+							<h3>Database Design &amp; Development</h3>
+							<ul class="bold plain">
+								<li>Microsoft SQL Server<div class="progress-bar"><div style="width: 90%"></div></div></li>
+								<li>MySQL<div class="progress-bar"><div style="width: 85%"></div></div></li>
+								<li>SQLite <div class="progress-bar"><div style="width: 80%"></div></div></li>
+								<li>MongoDB <div class="progress-bar"><div style="width: 60%"></div></div></li>
+							</ul>
+							<h3>Mobile Development</h3>
+							<ul class="bold plain">
+								<li>Android <div class="progress-bar"><div style="width: 75%"></div></div></li>
+								<li>iOS <div class="progress-bar"><div style="width: 50%"></div></div></li>
+								<li>Cordova <div class="progress-bar"><div style="width: 50%"></div></div></li>
 							</ul>
 						</div>
 
@@ -111,11 +185,6 @@
 		</div> <!-- /container -->
 		
 		<footer id="footer">
-			<ul class="elsewhere">
-				<li><a href="https://twitter.com/lebensform_me"><i class="icon-twitter"></i> Follow me on Twitter</a></li>
-				<li><a href="http://dribbble.com/Nazcain"><i class="icon-dribbble"></i> Find me on Dribbble</a></li>
-				<li><a href="http://themeforest.net/user/Lebensform"><i class="icon-basket"></i> Buy this template</a></li>
-			</ul>
 			<p>Developed with <i class="fa fa-heart-o"></i> by Bo Liu</p>
 		</footer> <!-- /footer -->
 				
