--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@
 		</div> <!-- /container -->
 		
 		<footer id="footer">
-			<p>Developed with <i class="fa fa-heart-o"></i> by Bo Liu</p>
+			<p>Developed with <i class="fa fa-heart-o"></i> by Bo Liu &nbsp; &nbsp; <a href="mailto:liubo2055@gmail.com" target="_top"><i class="fa fa-envelope-o"></i></a></p>
 		</footer> <!-- /footer -->
 				
 		<!-- JavaScript -->
