--- a/index.html
+++ b/index.html
@@ -176,6 +176,10 @@
 							</ul>
 						</div>
 
+						<a href="mailto:liubo2055@gmail.com" target="_top"><p><i class="icon-mail"></i></a> <strong>E-mail:</strong> liubo2055@gmail.com</p>
+
+						<p><i class="icon-phone"></i> <strong>Phone:</strong> 778-836-0999</p>
+
 					</div>
 
 				</div>
@@ -185,7 +189,7 @@
 		</div> <!-- /container -->
 		
 		<footer id="footer">
-			<p>Developed with <i class="fa fa-heart-o"></i> by Bo Liu &nbsp; &nbsp; <a href="mailto:liubo2055@gmail.com" target="_top"><i class="fa fa-envelope-o"></i></a></p>
+			<p>Developed with <i class="fa fa-heart-o"></i> by Bo Liu</p>
 		</footer> <!-- /footer -->
 				
 		<!-- JavaScript -->
