--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 	<head>
 		<meta charset="utf-8">
-		<title>Bo Liu – Developer &amp; Editor</title>
+		<title>Bo Liu – Web &amp; Mobile Developer</title>
 		
 		<!-- Mobile Specific Settings -->
 		<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
