--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 
 	<header id="header">
 			<h1><a href="index.html">Bo Liu</a></h1>
-			<h2>Developer <span class="amp">&amp;</span> Editor</h2>
+			<h2>Web <span class="amp">&amp;</span> Mobile Developer</h2>
 		</header>
 		
 		<div id="container">
