--- a/index.html
+++ b/index.html
@@ -23,7 +23,18 @@
 		<link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/github-fork-ribbon-css/0.1.1/gh-fork-ribbon.ie.min.css" />
 		<![endif]-->
 		<noscript><link rel="stylesheet" href="css/no-js.css"></noscript>
-		
+
+		<!-- Google Analytics Tracking Code-->
+		<script>
+			(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+						(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+					m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+			})(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+			ga('create', 'UA-50513709-2', 'auto');
+			ga('send', 'pageview');
+
+		</script>
 	</head>
 	<body>
 	<!--<a href="https://github.com/liubo2055">-->
