move education section up to the top

--- a/index.html
+++ b/index.html
@@ -54,6 +54,26 @@
 
 					<div class="span8">
 
+						<!-- Education Section-->
+
+						<h2 class="section-heading">Education</h2>
+						<dl class="timeline section">
+							<dt>
+							<p>2014-2015</p>
+							</dt>
+							<dd>
+								<h4><a href="http://www.bcit.ca/study/programs/6465acert">Web and Mobile Application Development Certificate</a> <small>of British Columbia Institute of Technology</small></h4>
+							</dd>
+							<dt>
+							<p>2015-2016</p>
+							</dt>
+							<dd>
+								<h4><a href="http://www.bcit.ca/study/programs/6445acert">Advanced Java Development Certificate</a> <small>of British Columbia Institute of Technology</small></h4>
+							</dd>
+						</dl>
+
+
+						<!-- Work Experience Section-->
 						<h2 class="section-heading offset-top">Work Experience</h2>
 						<dl class="timeline">
 							<dt>
@@ -126,22 +146,8 @@
 							</dd>
 						</dl>
 
-						<h2 class="section-heading">Education</h2>
-						<dl class="timeline section">
-							<dt>
-							<p>2014-2015</p>
-							</dt>
-							<dd>
-								<h4><a href="http://www.bcit.ca/study/programs/6465acert">Web and Mobile Application Development Certificate</a> <small>of British Columbia Institute of Technology</small></h4>
-							</dd>
-							<dt>
-							<p>2015-2016</p>
-							</dt>
-							<dd>
-								<h4><a href="http://www.bcit.ca/study/programs/6445acert">Advanced Java Development Certificate</a> <small>of British Columbia Institute of Technology</small></h4>
-							</dd>
-						</dl>
 
+						<!-- Download Resume Button-->
 						<p class="span4 offset2"><a class="button secondary full" href="bo-liu-resume.pdf"><i class="icon-download"></i> Download My Resume</a></p>
 
 					</div>
