--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
 								<li>Node.js <div class="progress-bar"><div style="width: 50%"></div></div></li>
 								<li>ASP.Net <div class="progress-bar"><div style="width: 50%"></div></div></li>
 							</ul>
-							<h3>Front-End Web Development</h3>
+							<h3>Front-End Web Design</h3>
 							<ul class="bold plain">
 								<li>HTML / CSS <div class="progress-bar"><div style="width: 85%"></div></div></li>
 								<li>JavaScript / jQuery <div class="progress-bar"><div style="width: 80%"></div></div></li>
