favicon, resume update

--- a/index.html
+++ b/index.html
@@ -3,6 +3,13 @@
 	<head>
 		<meta charset="utf-8">
 		<title>Bo Liu – Web &amp; Mobile Developer</title>
+
+		<!-- Favicon-->
+		<link rel="shortcut icon" sizes="24x24" href="img/User-24.png">    <!-- Favicon -->
+		<link rel="apple-touch-icon-precomposed" sizes="50x50" href="img/User-50.png">    <!-- For iPhone -->
+		<link rel="apple-touch-icon-precomposed" sizes="100x100" href="img/User-100.png">    <!-- For iPhone 4 Retina display -->
+		<link rel="apple-touch-icon-precomposed" sizes="64x64" href="img/User-64.png}">    <!-- For iPad -->
+		<link rel="apple-touch-icon-precomposed" sizes="100x100" href="img/User-100.png">    <!-- For iPad Retina display -->
 		
 		<!-- Mobile Specific Settings -->
 		<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
