--- a/index.html
+++ b/index.html
@@ -65,18 +65,21 @@
 
 						<h2 class="section-heading">Education</h2>
 						<dl class="timeline section">
-							<dt>
-							<p>2014-2015</p>
-							</dt>
-							<dd>
-								<h4><a href="http://www.bcit.ca/study/programs/6465acert">Web and Mobile Application Development Certificate</a> <small>of British Columbia Institute of Technology</small></h4>
-							</dd>
+
 							<dt>
 							<p>2015-2016</p>
 							</dt>
 							<dd>
 								<h4><a href="http://www.bcit.ca/study/programs/6445acert">Advanced Java Development Certificate</a> <small>of British Columbia Institute of Technology</small></h4>
 							</dd>
+
+							<dt>
+							<p>2014-2015</p>
+							</dt>
+							<dd>
+								<h4><a href="http://www.bcit.ca/study/programs/6465acert">Web and Mobile Application Development Certificate</a> <small>of British Columbia Institute of Technology</small></h4>
+							</dd>
+
 						</dl>
 
 
@@ -90,7 +93,7 @@
 							<dd>
 								<h4><a href="http://choco.sytes.net:333/assignment3">Web Application with PHP, MySQL, and Laravel 5.1</a></h4>
 								<p>
-									Developed and implemented a web flashcards application based on LAMP and Laravel framework
+									Developed and implemented a web flashcards application based on LAMP and Laravel 5.1 framework
 								</p>
 								<a href="https://github.com/liubo2055/COMP-2920-Project"><i class="fa fa-github"></i></a>&nbsp;&nbsp;&nbsp;<a href="http://choco.sytes.net:333/assignment3"><i class="fa fa-link"></i></a>
 							</dd>
@@ -110,7 +113,7 @@
 							<p>Jan – May 2015</p>
 							</dt>
 							<dd>
-								<h4><a href="https://youtu.be/9byFGVawHy0">An Android News Publish and Reader App with Java and Node.js</a></h4>
+								<h4><a href="https://youtu.be/9byFGVawHy0">An Android News App with Java and Node.js</a></h4>
 								<p>Developed a RESTful API with Node.js, express and mongo DB to publish, edit, and delete news </p>
 								<p>Implemented a news reader with XML and JSON parser, and starred the news with SQLite database</p>
 								<a href="https://github.com/liubo2055/android-news-app"><i class="fa fa-github"></i></a>&nbsp;&nbsp;&nbsp;<a href="https://youtu.be/9byFGVawHy0"><i class="fa fa-youtube"></i></a>
@@ -142,14 +145,6 @@
 								<h4><a href="https://github.com/liubo2055/accelerometer-game-cordova">Accelerometer Game with Cordova</a></h4>
 								<p>Developed a bumper ball game with Cordova device motion plugin and jQuery mobile UI</p>
 								<a href="https://github.com/liubo2055/accelerometer-game-cordova"><i class="fa fa-github"></i></a>
-							</dd>
-							<dt>
-								<strong>Project 7</strong>
-							<p>April – June 2014</p>
-							</dt>
-							<dd>
-								<h4>UBC Student Club Website with WordPress</h4>
-								<p>Developed a WordPress website for UBC student club</p>
 							</dd>
 						</dl>
 
