--- a/index.html
+++ b/index.html
@@ -91,11 +91,11 @@
 							<p>May – July 2015</p>
 							</dt>
 							<dd>
-								<h4><a href="http://choco.sytes.net:333/assignment3">Web Application with PHP, MySQL, and Laravel 5.1</a></h4>
+								<h4>Web Application with PHP, MySQL, and Laravel 5.1</h4>
 								<p>
 									Developed and implemented a web flashcards application based on LAMP and Laravel 5.1 framework
 								</p>
-								<a href="https://github.com/liubo2055/COMP-2920-Project"><i class="fa fa-github"></i></a>&nbsp;&nbsp;&nbsp;<a href="http://choco.sytes.net:333/assignment3"><i class="fa fa-link"></i></a>
+								<a href="https://github.com/liubo2055/COMP-2920-Project"><i class="fa fa-github"></i></a>
 							</dd>
 							<dt>
 								<strong>Project 2</strong>
