update laravel project hyperlink

--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
 							<p>May – July 2015</p>
 							</dt>
 							<dd>
-								<h4>Web Application with PHP, MySQL, and Laravel 5.1</h4>
+								<h4><a href="https://github.com/liubo2055/COMP-2920-Project">Web Application with PHP, MySQL, and Laravel 5.1</a></h4>
 								<p>
 									Developed and implemented a web flashcards application based on LAMP and Laravel 5.1 framework
 								</p>
