--- a/index.html
+++ b/index.html
@@ -48,6 +48,17 @@
 		<!--<img style="position: absolute; top: 0; right: 0; border: 0;" src="https://camo.githubusercontent.com/52760788cde945287fbb584134c4cbc2bc36f904/68747470733a2f2f73332e616d617a6f6e6177732e636f6d2f6769746875622f726962626f6e732f666f726b6d655f72696768745f77686974655f6666666666662e706e67" alt="Fork me on GitHub" data-canonical-src="https://s3.amazonaws.com/github/ribbons/forkme_right_white_ffffff.png">-->
 	<!--</a>-->
 
+	<!-- JiaThis Button BEGIN -->
+	<div id="ckepop">
+		<span class="jiathis_txt">分享到：</span>
+		<a class="jiathis_button_weixin">微信</a>
+		<a href="http://www.jiathis.com/share"  class="jiathis jiathis_txt jiathis_separator jtico jtico_jiathis" target="_blank">更多</a>
+		<a class="jiathis_counter_style"></a> </div>
+	<script type="text/javascript" src="http://v3.jiathis.com/code/jia.js?uid=1" charset="utf-8"></script>
+	</div>
+	<!-- JiaThis Button END -->
+
+
 	<header id="header">
 			<h1><a href="index.html">Bo Liu</a></h1>
 			<h2>Web <span class="amp">&amp;</span> Mobile Developer</h2>
